# predicting-soccer

./: .dockerignore  Dockerfile  README.md  pyproject.toml  sports_data.db
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  weekly_data_update.yml
config/: leagues.yaml
notebooks/: notebook.ipynb
notes/: 2026_data_checklist.md  ARCHITECTURE.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_CHECKLIST.md  MODULE_REFERENCE.md  QUICKSTART.md  model_verification_results.md
src/: main.py
src/data/: fetch_odds.py  ingest_fbref.py  ingest_injuries.py  ingest_lineups.py  ingest_schedule.py  ingest_weather.py  loader.py  update_pipeline.py
src/database/: id_reconciliation.py  schema.py  sports_data.db
src/features/: elo.py  lagged_stats.py  pythagorean.py
src/models/: baseline.py
src/processing/: feature_engineering.py  metrics.py
tests/: verify_baseline.py  verify_features_phase2.py  verify_pythagorean.py
