[project]
name = "my-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.16",
]
